// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show expense summary properly with expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $11,098.99
  </p>
</div>
`;

exports[`should show expense summary properly without expenses 1`] = `
<div>
  <p>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </p>
</div>
`;
